theme/assets/stylesheets/home.css
/*
/// Copyright (c) 2016-2022 Martin Donath <martin.donath@squidfunk.com>
/// Copyright (c) 2022-2023 Jonah Aragon <jonah@triplebit.net>
///
/// Permission is hereby granted, free of charge, to any person obtaining a
/// copy of this software and associated documentation files (the "Software"),
/// to deal in the Software without restriction, including without limitation
/// the rights to use, copy, modify, merge, publish, distribute, sublicense,
/// and/or sell copies of the Software, and to permit persons to whom the
/// Software is furnished to do so, subject to the following conditions:
///
/// The above copyright notice and this permission notice shall be included in
/// all copies or substantial portions of the Software.
///
/// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
/// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
/// FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL
/// THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
/// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
/// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
/// DEALINGS
*/

/* Homepage hero section */
.mdx-container {
    background: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' viewBox='0 0 1123 258' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xml:space='preserve' xmlns:serif='http://www.serif.com/' style='fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;'><g transform='matrix(-1.01432,0,0,0.388868,1134.41,161.501)'><path d='M1124,2L1124,258L-1,258L-1,210C-1,210 15,215 54,215C170,215 251,123 379,123C500,123 493,169 633,169C773,169 847,2 1205,3L1124,2Z' style='fill:rgb(247, 247, 252);fill-rule:nonzero;'/></g></svg>")
            no-repeat bottom,
        linear-gradient(to bottom, rgb(255 255 255/.8), #ffdd98 99%, var(--md-default-bg-color) 99%);
    background-size: contain;
    padding-top: 1rem;
}
[data-md-color-scheme="slate"] .mdx-container {
    background: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' viewBox='0 0 1123 258' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xml:space='preserve' xmlns:serif='http://www.serif.com/' style='fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;'><g transform='matrix(-1.01432,0,0,0.388868,1134.41,161.501)'><path d='M1124,2L1124,258L-1,258L-1,210C-1,210 15,215 54,215C170,215 251,123 379,123C500,123 493,169 633,169C773,169 847,2 1205,3L1124,2Z' style='fill:rgb(26, 26, 27);fill-rule:nonzero;'/></g></svg>")
            no-repeat bottom, rgba(9, 9, 9, 0.95);
        background-size: contain;
}

.mdx-hero {
    color: var(--pg-hero-color);
    margin: 0 0.8rem;
}
.mdx-hero h1 {
    color: currentcolor;
    margin-bottom: 1rem;
    font-size: 2.6rem;
}
@media screen and (max-width: 29.9375em) {
    .mdx-hero h1 {
        font-size: 1.4rem;
    }
}
.mdx-hero__content {
    padding-bottom: 6rem;
}
@media screen and (min-width: 60em) {
    .mdx-hero {
        align-items: stretch;
        display: flex;
    }
    .mdx-hero__content {
        margin-top: 3.5rem;
        max-width: 38rem;
        padding-bottom: 14vw;
    }
    .mdx-hero__image {
        order: 1;
        transform: translateX(4rem);
        width: 38rem;
    }
}
@media screen and (min-width: 76.25em) {
    .mdx-hero__image {
        transform: translateX(8rem);
    }
}
.mdx-hero .md-button {
    color: var(--pg-hero-color);
    border-color: var(--pg-hero-color);
}
[data-md-color-scheme="slate"] .mdx-hero .md-button--primary {
    color: var(--md-primary-fg-color);
}
.mdx-hero .md-button--primary {
    color: var(--md-primary-fg-color);
    background-color: var(--pg-hero-color);
    border-color: transparent;
    margin-right: 0.5rem;
    margin-top: 0.5rem;
}
nav[class="md-tabs"] {
    border-bottom: none;
}

/* Homepage Body */
.md-typeset a.headerlink {
    display: none;
}
article.md-content__inner {
    max-width: 50rem;
    margin: auto;
    padding-bottom: 3rem;
}
article.md-content__inner > * {
    max-width: 38rem;
}
article.md-content__inner > *:nth-child(n+8):nth-child(-n+12) {
    margin-left: auto;
    margin-right: 0;
    text-align: right;
}
article.md-content__inner > hr {
    margin: 3rem;
}
article.md-content__inner > *:nth-child(n+13) {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}
article.md-content__inner > *:nth-child(n+13) a:has(.twemoji) {
    display: inline-block;
}
article.md-content__inner > *:nth-child(n+13) .twemoji {
    --md-icon-size: 1.8em;
    margin: 0.4rem;
}

